--- a/style.css
+++ b/style.css
@@ -7,7 +7,53 @@
   font-family: "Roboto", sans-serif;
 }
 
-body {
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #e80202;
+  overflow: hidden;
+}
+
+.heart {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background: #e80202;
+  transform: rotate(45deg);
+  box-shadow: 20px 20px 40px rgba(0, 0, 0, 0.2);
+}
+
+.heart::before {
+  content: "";
+  position: absolute;
+  top: -50%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #e80202;
+  border-radius: 50%;
+  box-shadow: 0 -20px 20px rgba(0, 0, 0, 0.1);
+}
+
+.heart::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -50%;
+  width: 100%;
+  height: 100%;
+  background: #e80202;
+  border-radius: 50%;
+  box-shadow: -20px 0 20px rgba(0, 0, 0, 0.1);
+}
+
+/* body {
   position: relative;
   overflow: hidden;
   display: flex;
@@ -24,4 +70,4 @@ h2 {
   line-height: 0.7em;
   z-index: 1000;
   font-weight: 900;
-}
+} */
