--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 .container {
@@ -20,6 +23,25 @@
 h1 {
   z-index: 10;
   color: #fff;
+}
+
+h2 {
+  color: #fff;
+  text-align: center;
+  font-size: 8vw;
+  line-height: 0.7em;
+  z-index: 1000;
+  font-weight: 900;
+}
+
+h2 span {
+  font-size: 0.409em;
+  letter-spacing: 0.15em;
+  font-weight: 400;
+  margin-left: 2px;
+  /* margin-right: 0.5px; */
+  text-transform: uppercase;
+  text-align: left;
 }
 
 .heart {
