--- a/style.css
+++ b/style.css
@@ -1,78 +1,81 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Roboto", sans-serif;
 }
 
+.github-corner {
+	z-index: 2000;
+}
 .container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #e80202;
-  overflow: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: #e80202;
+	overflow: hidden;
 }
 
 h1 {
-  z-index: 10;
-  color: #fff;
+	z-index: 10;
+	color: #fff;
 }
 
 h2 {
-  color: #fff;
-  text-align: center;
-  font-size: 8.1vw;
-  line-height: 0.7em;
-  z-index: 1000;
-  font-weight: 900;
+	color: #fff;
+	text-align: center;
+	font-size: 8.1vw;
+	line-height: 0.7em;
+	z-index: 1000;
+	font-weight: 900;
 }
 
 h2 span {
-  font-size: 0.54em;
-  letter-spacing: 0.15em;
-  font-weight: 400;
-  margin-left: 6px;
-  /* margin-right: 0.5px; */
-  text-transform: uppercase;
-  text-align: left;
+	font-size: 0.54em;
+	letter-spacing: 0.15em;
+	font-weight: 400;
+	margin-left: 6px;
+	/* margin-right: 0.5px; */
+	text-transform: uppercase;
+	text-align: left;
 }
 
 .heart {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  background: #e80202;
-  transform: rotate(45deg);
-  box-shadow: 20px 20px 40px rgba(0, 0, 0, 0.2);
+	position: absolute;
+	width: 40px;
+	height: 40px;
+	background: #e80202;
+	transform: rotate(45deg);
+	box-shadow: 20px 20px 40px rgba(0, 0, 0, 0.2);
 }
 
 .heart:before {
-  content: "";
-  position: absolute;
-  top: -50%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #e80202;
-  border-radius: 50%;
-  box-shadow: 0 -20px 20px rgba(0, 0, 0, 0.1);
+	content: "";
+	position: absolute;
+	top: -50%;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #e80202;
+	border-radius: 50%;
+	box-shadow: 0 -20px 20px rgba(0, 0, 0, 0.1);
 }
 
 .heart:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -50%;
-  width: 100%;
-  height: 100%;
-  background: #e80202;
-  border-radius: 50%;
-  box-shadow: -20px 0px 20px rgba(0, 0, 0, 0.1);
+	content: "";
+	position: absolute;
+	top: 0;
+	left: -50%;
+	width: 100%;
+	height: 100%;
+	background: #e80202;
+	border-radius: 50%;
+	box-shadow: -20px 0px 20px rgba(0, 0, 0, 0.1);
 }
