--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+:root {
+	--white: #fff;
+	--black: #000;
+	--red: #e80202;
+	--github-fill: var(--white);
+	--github-color: var(--red);
+	--github-focus: var(--black);
+	--roboto: "Roboto", sans-serif;
+	--heart-shadow: 20px 20px 40px rgba(0, 0, 0, 0.2);
+	--before-shadow: 0 -20px 20px rgba(0, 0, 0, 0.1);
+	--after-shadow: -20px 0px 20px rgba(0, 0, 0, 0.1);
+}
+
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: "Roboto", sans-serif;
+	font-family: var(--roboto);
 }
 
-.github-corner {
-	z-index: 2000;
-}
 .container {
-	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -19,17 +28,14 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: #e80202;
 	overflow: hidden;
 }
 
 h1 {
 	z-index: 10;
-	color: #fff;
 }
 
 h2 {
-	color: #fff;
 	text-align: center;
 	font-size: 8.1vw;
 	line-height: 0.7em;
@@ -37,45 +43,97 @@ h2 {
 	font-weight: 900;
 }
 
+h1,
+h2 {
+	color: var(--white);
+}
+
 h2 span {
 	font-size: 0.54em;
 	letter-spacing: 0.15em;
 	font-weight: 400;
 	margin-left: 6px;
-	/* margin-right: 0.5px; */
 	text-transform: uppercase;
 	text-align: left;
 }
 
 .heart {
-	position: absolute;
 	width: 40px;
 	height: 40px;
-	background: #e80202;
 	transform: rotate(45deg);
-	box-shadow: 20px 20px 40px rgba(0, 0, 0, 0.2);
+	box-shadow: var(--heart-shadow);
 }
 
 .heart:before {
 	content: "";
-	position: absolute;
 	top: -50%;
 	left: 0;
-	width: 100%;
-	height: 100%;
-	background: #e80202;
-	border-radius: 50%;
-	box-shadow: 0 -20px 20px rgba(0, 0, 0, 0.1);
+	box-shadow: var(--before-shadow);
 }
 
 .heart:after {
 	content: "";
-	position: absolute;
 	top: 0;
 	left: -50%;
+	box-shadow: var(--after-shadow);
+}
+
+.heart,
+.heart:before,
+.heart:after,
+.container {
+	position: absolute;
+	background: var(--red);
+}
+
+.heart:before,
+.heart:after {
 	width: 100%;
 	height: 100%;
-	background: #e80202;
 	border-radius: 50%;
-	box-shadow: -20px 0px 20px rgba(0, 0, 0, 0.1);
+}
+
+.github-corner {
+	z-index: 2000;
+}
+
+.github-corner:focus svg path {
+	fill: var(--github-focus);
+}
+
+.github-corner:focus .octo-arm,
+.github-corner:focus .octo-body {
+	fill: var(--github-color);
+}
+
+.github-corner:hover .octo-arm,
+.github-corner:focus .octo-arm {
+	animation: octocat-wave 560ms ease-in-out;
+}
+
+@keyframes octocat-wave {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+
+	20%,
+	60% {
+		transform: rotate(-25deg);
+	}
+
+	40%,
+	80% {
+		transform: rotate(10deg);
+	}
+}
+
+@media (max-width: 500px) {
+	.github-corner:hover .octo-arm {
+		animation: none;
+	}
+
+	.github-corner .octo-arm {
+		animation: octocat-wave 560ms ease-in-out;
+	}
 }
